# DNAsearch

./: .gitignore  CMakeLists.txt  README.md
src/: bm.cpp  bm.h  hash_cache.cpp  hash_cache.h  input.cpp  input.h  kmp.cpp  kmp.h  main.cpp  mmap_reader.cpp  mmap_reader.h  output.cpp  output.h  segment_tree.cpp  segment_tree.h  suffix_array.cpp  suffix_array.h
tests/: test_bm.cpp  test_cache.cpp  test_kmp.cpp
